welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: value move
while (move(getY(),getDirection() == Direction.NORTH) && !estFaceMur()){
       ^Program:5: error: not found: value move
while (move(getY(),getDirection() == Direction.SOUTH) && !estDosMur()){
       ^